<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="title_name">Title</string>
    <string name="description_movie">Description</string>
    <string name="detail_date">Date of release</string>
    <string name="detail_description">Description</string>
    <string name="item_title">Title</string>
    <string name="item_description">Description</string>
    <string name="button_detail">Detail</string>
    <string name="button_share">Share</string>
    <string name="detail_title">Title</string>
    <string name="item_date_of_release">Date of release</string>


    <string-array name="data_title">
        <item>Ant-Man and the Wasp (2018)</item>
        <item>Aquaman (2018)</item>
        <item>Avengers: Infinity War (2018)</item>
        <item>Black Panther (2018)</item>
        <item>Bumblebee (2018)</item>
        <item>Deadpool 2 (2018)</item>
        <item>Dragon Ball Super: Broly (2018)</item>
        <item>Glass (2019)</item>
        <item>How to Train Your Dragon: The Hidden World (2019)</item>
        <item>Maleficent: Mistress of Evil (2019)</item>
        <item>Mortal Engines (2018)</item>
        <item>Spider-Man: Into the Spider-Verse (2018)</item>
        <item>Venom (2018)</item>
        <item>Ralph Breaks the Internet (2018)</item>
    </string-array>


    <string-array name="data_description">
        <item>"When Scott Lang tries to balance his life as a Super Hero and father, Hope van Dyne and Dr. Hank Pym prepares an urgent new mission and makes Ant-Man fight together with The Wasp to uncover the secrets of their past."</item>
        <item>"Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, 'Orm's' half-human, half-Atlantean brother and true heir to the throne."</item>
        <item>"Because the Avengers and their allies continue to protect the world from threats that are too large to be handled by a hero, a new danger has emerged from the cosmic shadow: Thanos. An intergalactic blasphemous despot, his aim is to gather all six Infinity Stones, artifacts of unimaginable strength, and use them to induce a turning around on all reality. Everything that the Avengers have fought for has evolved to this day - the fate of the Earth and its very existence has never been more certain."</item>
        <item>"King T'Challa returns home from America to the reclusive, technologically advanced African nation of Wakanda to serve as his country's new leader. However, T'Challa soon finds that he is challenged for the throne by factions within his own country as well as without. Using powers reserved to Wakandan kings, T'Challa assumes the Black Panther mantel to join with girlfriend Nakia, the queen-mother, his princess-kid sister, members of the Dora Milaje (the Wakandan 'special forces') and an American secret agent, to prevent Wakanda from being dragged into a world war."</item>
        <item>"On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug."</item>
        <item>"Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy's life."</item>
        <item>"Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called 'Broly' who they've never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what's this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix."</item>
        <item>"In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men."</item>
        <item>"When Hiccup fulfilled his dream of creating a peaceful dragon utopia, Toothless' discovery of an untested and elusive couple kept Night Fury away. When the danger increases at home and the Hiccup government as the village head is tested, both dragons and motorists must make the impossible decision to save their kind."</item>
        <item>"Maleficent and her goddaughter Aurora begin to question the complex family ties that bind them as they are pulled in different directions by impending nuptials, unexpected allies, and dark new forces at play."</item>
        <item>"Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever."</item>
        <item>"Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension."</item>
        <item>"A journalist, Eddie Brock (Tom Hardy) wants to make an investment case for the discovery led by Dr. Carlton Drake (Riz Ahmed). Because of his investigation, Eddie visited Dr.'s lab Calrlton Drake. Everything is intended to prove that Dr. Carlton Drake is doing an evil act using Symbiote. However, unfortunately for Eddie, this living organism entered his body. Eddie found super powers within him that were able to control everything he did."</item>
        <item>"Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellope's video game, "Sugar Rush." In way over their heads, Ralph and Vanellope rely on the citizens of the internet — the netizens — to help navigate their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of trend-making site BuzzzTube."</item>
    </string-array>


    <string-array name="data_date_release">
        <item>July 4, 2018</item>
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>February 13, 2018</item>
        <item>December 15, 2018</item>
        <item>May 10, 2018</item>
        <item>December 14, 2018</item>
        <item>January 16, 2019</item>
        <item>January 3, 2019</item>
        <item>October 16, 2019</item>
        <item>November 27, 2018</item>
        <item>December 6, 2018</item>
        <item>September 28, 2018</item>
        <item>November 20, 2018</item>
    </string-array>

    <array name="data_photo">
        <item>@drawable/poster_ant_man</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_black_panther</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_deadpool_2</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_maleficent_2</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_venom</item>
        <item>@drawable/poster_wreck_it_ralph</item>
    </array>

</resources>