<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:background="@android:color/darker_gray"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/item_image"
        android:fontFamily="casual"
        android:text="@string/item_title"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_date_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_title"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/item_image"
        android:fontFamily="sans-serif"
        android:text="@string/item_date_of_release"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_date_release"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/item_image"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="3"
        android:text="@string/item_description"
        android:textSize="12sp" />

</RelativeLayout>